# MEDICAL_CONFORMER_RAG

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
data/audio_chunks/: patient_diagnosis_chunks.json
faiss_store/: faiss.index  metadata.json  metadata.pkl
src/: audio_to_json_chunks.py  data_loader.py  embedding.py  eval_rag.py  search.py  vectorstore.py
stt/: audio.py  inference.py  model.py
stt_model/: speech-conformer.ipynb
